Fix persisting searchbar overlapping issue

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -146,7 +146,7 @@
     }
 
     #header-right-child {
-        margin-top: 60px;
+        width: 65vw;
     }
 
     #header {
@@ -161,6 +161,8 @@
         left: 0;
         z-index: 8;
         opacity: 0.5;
+        width: 40px;
+        height: 40px;
     }
 
     #menu-button:hover {
@@ -175,7 +177,10 @@
     #search-bar, #search-button {
         display: block;
         margin: auto;
-        padding: 2vh 8vmax;
+    }
+
+    #search-bar {
+        padding: 2vh 0;
     }
 
     #search-button {
